--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -258,9 +258,7 @@
 }
 
 .footer-title-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
     padding-top: 60px;
 
     margin-bottom: 20px;
@@ -271,8 +269,16 @@
     line-height: 1.14;
     letter-spacing: 0.03em;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (max-width: 768px) {
+            
+            padding-top: 60px;
+        }
+
+    @media screen and (max-width: 1200px) {
             padding: 0;
+            display: flex;
+                justify-content: center;
+                align-items: center;
         }
 }
 
@@ -299,7 +305,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: unset
+        flex-direction: unset;
+        margin: 20px auto 0;
     }
    
     @media screen and (min-width: 1200px) {
